[package]
name = "breathe-retirada-ci"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "retirada's spot-reclaim signal applied to job-shaped (CI) workloads: classify a GH Actions runner-pod loss as a legitimate auction-ether reclaim vs a real failure, and (only for the former) redispatch that one job onto the existing on-demand runner override -- never a blanket retry, never a fresh spot pool for the retry."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
