[package]
name = "breathe-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared controller-runtime glue for breathe's two reconcile binaries (the brain controller + the host agent): the TickReceipt -> BandStatus mapping and the status patch. Solved once so the two processes can never drift in how a decision is reported."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-core = { path = "../breathe-core", version = "0.1.0" }
breathe-crd = { path = "../breathe-crd", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
breathe-store = { path = "../breathe-store", version = "0.1.0" }
kube = { version = "0.96", features = ["client", "runtime", "derive"], default-features = false }
metrics = "0.24"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"

[dev-dependencies]
# patch_status_if_changed's diff-gate test (task #220) mocks the k8s apiserver
# the same way kube-client's own test suite does: a `tower_test::mock::pair`
# stood in for the real HTTP transport under `kube::Client::new`, so the test
# proves zero-vs-one real API calls rather than just the pure comparison.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
tower-test = "0.4"
http = "1"

[lints]
workspace = true
