[package]
name = "dimension-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The memory ResourceProvider for breathe — observe working-set/limit, assign limits.memory via true SSA (theory/BREATHE.md §3.3). The owner rolls; the band law is never re-decided here."

[dependencies]
breathe-control = { path = "../breathe-control", version = "0.1.0" }
breathe-provider = { path = "../breathe-provider", version = "0.1.0" }
async-trait = "0.1"

[lints]
workspace = true
