# breathe-auction — the ARCH × AUCTION × SPOT configuration-spread LOCK.
#
# The COMPUTE/AUCTION companion to `breathe-invariant` (the breathability
# variant/invariant lock). Where breathe-invariant locks "carve every resource
# DIMENSION to a setpoint, dual-purpose, default-on", this crate locks the
# orthogonal COMPUTE surface: the typed PERMUTATION SPACE of
# `arch × spot-strategy × auction-ladder × perf-class × placement × interruption`,
# every combination configurable, with a MOLDING default per use-case
# (SaaS-steady / build-burst / eyes), under the never-on-demand hard law and the
# breathability dual-purpose (cost AND resiliency, one mechanism).
#
# Standalone workspace root (like breathe-invariant) so it composes the breathe
# substrate + the pangea node-groups + the spot catalog BY REFERENCE
# (doctrine_ref) without coupling to their build or in-flight churn. The concrete
# realizers stay where they live — `breathe-catalog::builder` (the DegradeTier
# ladders), `pangea-architectures` (Camelot{,Builder}NodeGroup + AzTopology),
# `pangea-spot` (Allocation + Catalog) — and this lock names the space + the
# moldings + the invariant + the verification MATRIX over them.
#
# Follow-up: fold into the breathe workspace members (or add its own
# auto-release.yml) once the concurrent band-crate work lands, so the matrix runs
# in breathe CI + ships via AUTO-RELEASE (same follow-up breathe-invariant carries).
[package]
name = "breathe-auction"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/breathe"
description = "The ARCH × AUCTION × SPOT configuration-spread lock — the compute/auction companion to breathe-invariant. A typed configurable-permutation space (arch × spot-strategy × auction-ladder × perf-class × placement × interruption) with a molding default per use-case (SaaS-steady/build-burst/eyes), under the never-on-demand hard law + breathability dual-purpose. Arch is a COST-OPTIMIZED axis (multi-arch AUTOBUMP images make arch selection free; the auction lands on the cheapest-deepest arch, self-adjusting). The verification MATRIX makes an on-demand permutation, an unexpressible arch, a single-effect molding, and an un-justified counter-intuitive cost choice CI-caught."

[lib]
name = "breathe_auction"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# Own workspace root — NOT a member of the parent breathe workspace (whose
# members are an explicit list under the repo root, not crates/*). Declaring
# [workspace] here makes cargo treat this crate as its own root, so building it
# never touches the parent's in-flight band crates (same isolation as
# crates/breathe-invariant).
[workspace]
