# breathe-invariant — the BREATHABILITY variant/invariant CONTRACT.
#
# A standalone crate (its own [workspace] root) so it composes the breathe
# substrate by REFERENCE without being coupled to the breathe workspace's
# build or its in-flight band-crate churn — exactly as gen-pdc/gen-secattest
# stay decoupled from the gen adapter crates. Follow-up: fold into the breathe
# workspace members (or add its own auto-release.yml) once the concurrent
# band-crate work lands, so the matrix runs in breathe CI + ships via
# AUTO-RELEASE.
[package]
name = "breathe-invariant"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/breathe"
description = "The BREATHABILITY variant/invariant contract — the typed lock of the breathability doctrine (carve-every-dimension-to-a-setpoint, default-on, dual-purpose cost+resiliency). The self-describing dimension CATALOG (Memory/Cpu/Storage/Replica/Database Bands) + the six-clause invariant + the verification MATRIX forcing-function (no_dimension_claimed_but_uncarved makes the 155GB storage-claimed-not-carved class CI-caught). The breathability peer of gen-pdc + gen-secattest."

[lib]
name = "breathe_invariant"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# Own workspace root — NOT a member of the parent breathe workspace (whose
# members are an explicit list under the repo root, not crates/*). Declaring
# [workspace] here makes cargo treat this crate as its own root, so building it
# never touches the parent's in-flight band crates.
[workspace]
