# breathe-lifecycle — the "no straggler nodes, ever" typescape for Camelot node
# provisioning (theory/CORRENTEZA.md, node-lifecycle addendum).
#
# A standalone crate (its own [workspace] root) so it composes the breathe
# substrate by REFERENCE without being coupled to the parent breathe
# workspace's build or its in-flight band-crate churn — the exact isolation
# discipline `breathe-invariant` and `crates/breathe-auction` already use.
[package]
name = "breathe-lifecycle"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/breathe"
description = "The 'no straggler nodes, ever' typescape: a phantom-typestate cloud-node lifecycle FSM (truly-unrepresentable illegal transitions), a continuous drift-reconciler that GCs orphaned cloud instances via lease-expiry-bounded mark-and-sweep (only-mitigated, C1+C2+C5 — named honestly), and a bulkhead + spend-rate circuit breaker bounding blast radius at credential acquisition."

[lib]
name = "breathe_lifecycle"
path = "src/lib.rs"

[dependencies]
# The shared typed-FSM convergence proof primitive (every reachable state
# reaches a good terminal) — the same primitive breathe-admission's
# FaseRecurso already consumes. Reused, not re-derived (Operating Principle #1).
shigoto-fsm = "0.1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# serde_json only, for one FaseNode wire round-trip test. The illegal-
# transition proofs are rustdoc `compile_fail` doctests (a built-in
# mechanism) — trybuild is not a fleet standard anywhere in the org
# (confirmed by an org-wide grep before reaching for it), so it is not
# introduced here.
serde_json = "1"
# Real-AWS shadow-mode proof harness only (tests/camelot_shadow_integration.rs).
# Dev-dependencies never affect the published lib's own dependency tree (the
# lib itself stays tokio-free, per src/drift/tests.rs's own block_on
# convention) — this is scoped strictly to the one integration test that
# proves OrphanTracker against real AWS reality, gated behind
# RUN_CAMELOT_AWS_INTEGRATION=1 so it never runs unattended / in CI without
# real akeyless-development credentials.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# Own workspace root — NOT a member of the parent breathe workspace (whose
# members are an explicit list under the repo root, not crates/*). Declaring
# [workspace] here makes cargo treat this crate as its own root, so building it
# never touches the parent's in-flight band crates (or the sibling
# breathe-crd/node_forma.rs work in flight this same session — see the ledger
# entry in theory/CORRENTEZA.md for the collision-avoidance rationale).
[workspace]
